assets/css/style.css
#tagLine {
    background: rgb(54, 25, 25);
    background: rgba(54, 25, 25, 0);
    font-family: 'Cedarville Cursive', cursive;
    font-family: 'Tangerine', cursive;
    text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
}
.nav {
    background: rgb(66, 139, 202);
    background: rgba(66, 139, 202, 1);
}

#withFood,
#withWine,
#searchLabel {
    color: white;
    text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
}

#titleLine {
    opacity: 1.0;
    filter: alpha(opacity=100);
    font-family: 'Cedarville Cursive', cursive;
    font-family: 'Tangerine', cursive;
    font-size: 90px;
}

#foodtext {
    filter: alpha(opacity=30);
}


.buttons,
#search-history {
    text-align: center;
    margin-bottom: 7px;
}

#submit {
    width: 100%;
}


#foodToForkPic {
    float: left;
    margin-bottom: 20px;
}

#winePic {
    float: right;
}

footer {
    bottom: 0;
    padding: 10px;
    width: 100%;
    text-align: center;
    font-family: 'Cedarville Cursive', cursive;
    font-family: 'Tangerine', cursive;
    font-size: 40px;
    color: white;   
    text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
}


.panel-body {
	display:;
}


.bg {
    background-image: url(../images/pexels-photo-160123.jpeg);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
}


.foodResultImage {
    max-width: 75%;
}


.result-block {
    padding-top: 1%;
    padding-bottom: 1%;
    text-align: center;
    border-top: solid 1px grey;
    border-bottom: solid 1px grey;
}

#blurb {
    padding: 1%;
    border: 1px solid gray;
}

#blurb,
.result-block {
    margin: 1% 15% 1% 15%;
    background-color: rgba(255,255,255,.9);
}

.history-button{
    margin-right: 3px;
    margin-left: 3px;
}

.food-title,
.wine-title {
    font-weight: bolder;
}

.food-details,
.wine-details {
    font-style: italic;
}

.done {
    display: none;
}

#wait {
    text-align: center;
    margin: 3%;
}

#waitimg{
    max-width: 30%;
    border: 3px solid gold;
}

#wait-text{
    color: white;
    text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
}

.animation-target {
  -webkit-animation: animation 865ms linear both;
  animation: animation 865ms linear both;
}
/* ... */

